test_programs/valid/increment_decrement.c
int main()
{
    int a;
    a++;
    a--;
}
