test_programs/invalid/float_plus_string.c
int main()
{
    "test" + 0.5;
}
